2010-09-17  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* * src/set.c (set_logscale): Removed arbitrary limitation for log base
	(was >= 1.1, now > 1.0)

2010-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_close):  Free matrix data that was stored in memory
	during input.  Otherwise we leak memory after every plot of matrix data.

	* src/plot2d.c (eval_plots):  Allow "fc <colorspec>" as an in-line
	option to the plot command for plot styles that use a fill.

	* src/term_api.h src/term.c (strlen_tex):  Add a special-case routine to
	estimate the true number of output characters in a LaTeX string
	containing markup. This is not a real LaTeX parser, but even a poor
	estimate is better than just calling strlen().
	Bug #1603348 and others

	* term/latex.trm term/lua.trm term/pslatex.trm: Set flag TERM_IS_LATEX
	so that strings passed to these terminals are sent to strlen_tex() 
	rather than the normal enhanced text string length estimation.

2010-09-17  Thomas Sefzick <thse@users.sourceforge.net>

	* src/gadgets.h src/graphics.c src/save.c src/set.c set/show.c
	src/tables.c src/tables.h docs/gnuplot.doc:

	New options "set key maxcolumns N maxrows M" to manually adjust the
	automatic layout of items in the figure legend. Implemented for 2D
	plots only.

2010-09-16  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg2.plt tutorial/eg6.plt tutorial/test_tikz.plt 
	tutorial/Makefile.am.in tutorial/header.tex tutorial/tutorial.tex:
	Update the LaTeX tutorial a bit.  More could be done.

2010-09-11  Ethan A Merritt  <merritt@u.washington.edu>

	Release 4.4.1

2010-09-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): When calculating the horizontal space
	required for x axis tick labels, we must ignore ticks that are outside
	the current axis range.

	* src/mouse.c (apply_zoom): Tick labels generated by
	'using xticlabels(N)' may have changed while the plot was zoomed, so we